--- a/index.html
+++ b/index.html
@@ -1,82 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>YTFlow Grid Player</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>YouTube Video Search</title>
   <style>
     body {
+      font-family: 'Poppins', sans-serif;
       background: #111;
       color: #fff;
-      font-family: 'Poppins', sans-serif;
-      padding: 20px;
+      padding: 2rem;
       text-align: center;
     }
-    h1 {
+
+    input {
+      padding: 10px;
+      width: 60%;
+      max-width: 500px;
+      border-radius: 8px;
+      font-size: 1rem;
+      border: none;
       margin-bottom: 1rem;
     }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      background-color: #ff3333;
+      border: none;
+      border-radius: 6px;
+      color: white;
+      cursor: pointer;
+    }
+
     .video-grid {
+      margin-top: 2rem;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 1rem;
     }
+
     .video-card {
+      width: 320px;
       background: #222;
       border-radius: 10px;
       overflow: hidden;
-      width: 300px;
-      cursor: pointer;
-      transition: transform 0.2s;
+      padding: 0.5rem;
     }
-    .video-card:hover {
-      transform: scale(1.03);
-    }
+
     iframe {
       width: 100%;
-      height: 170px;
+      height: 180px;
+      border: none;
+      border-radius: 10px;
     }
-    #warning {
-      color: #ff5c5c;
-      margin-top: 1rem;
+
+    .title {
+      padding: 0.5rem;
+      font-size: 0.95rem;
+      color: #ddd;
     }
   </style>
 </head>
 <body>
-  <h1>🎶 YTFlow – Chill Beats</h1>
-  <div class="video-grid" id="videoGrid">
-    <!-- Videos inserted by JS -->
-  </div>
-  <div id="warning"></div>
+
+  <h1>🔍 YouTube Video Search</h1>
+  <input type="text" id="searchInput" placeholder="Search YouTube videos..." />
+  <button onclick="searchVideos()">Search</button>
+
+  <div class="video-grid" id="videoResults"></div>
 
   <script>
-    const videos = [
-      { title: "Lo-fi Chill", id: "jfKfPfyJRdk" },
-      { title: "Synthwave 1", id: "MVPTGNGiI-4" },
-      { title: "No Copyright Beats", id: "mWRsgZuwf_8" },
-      { title: "Relax Music", id: "5qap5aO4i9A" },
-      { title: "Space Vibes", id: "DWcJFNfaw9c" },
-    ];
+    const API_KEY = "AIzaSyDR6R4F4iU1vtTHKMeRt9MjK8EsIvqI0dk";
 
-    const grid = document.getElementById("videoGrid");
-    videos.forEach(video => {
-      grid.innerHTML += `
-        <div class="video-card">
-          <iframe
-            src="https://www.youtube.com/embed/${video.id}?autoplay=0&controls=1"
-            allow="autoplay; encrypted-media"
-            allowfullscreen
-          ></iframe>
-          <p style="margin: 10px;">${video.title}</p>
-        </div>`;
-    });
+    async function searchVideos() {
+      const query = document.getElementById("searchInput").value;
+      const response = await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=6&q=${encodeURIComponent(query)}&key=${API_KEY}`);
+      const data = await response.json();
 
-    // Suggest better browsers
-    const isChrome = /Chrome/.test(navigator.userAgent) && /Google Inc/.test(navigator.vendor);
-    if (isChrome) {
-      document.getElementById("warning").innerText =
-        "⚠️ On Chrome mobile, videos may pause in background. Use Brave or Firefox for uninterrupted music!";
+      const results = data.items.map(item => {
+        const videoId = item.id.videoId;
+        const title = item.snippet.title;
+        return `
+          <div class="video-card">
+            <iframe src="https://www.youtube.com/embed/${videoId}?rel=0&showinfo=0&autoplay=0" allowfullscreen></iframe>
+            <div class="title">${title}</div>
+          </div>
+        `;
+      }).join("");
+
+      document.getElementById("videoResults").innerHTML = results;
     }
   </script>
+
 </body>
 </html>
