--- a/index.html
+++ b/index.html
@@ -1,90 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>YouTube Video Search</title>
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background: #111;
-      color: #fff;
-      padding: 2rem;
+      background: #0d0d0d;
+      color: #ffffff;
       text-align: center;
+      padding: 20px;
     }
 
-    input {
-      padding: 10px;
-      width: 60%;
-      max-width: 500px;
-      border-radius: 8px;
-      font-size: 1rem;
-      border: none;
+    h1 {
       margin-bottom: 1rem;
+      color: #ff4d4d;
+    }
+
+    .search-container {
+      margin-bottom: 20px;
+    }
+
+    input[type="text"] {
+      width: 70%;
+      max-width: 500px;
+      padding: 12px;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      outline: none;
     }
 
     button {
-      padding: 10px 20px;
-      font-size: 1rem;
-      background-color: #ff3333;
+      padding: 12px 20px;
+      font-size: 16px;
+      background-color: #ff4d4d;
       border: none;
-      border-radius: 6px;
       color: white;
+      border-radius: 8px;
       cursor: pointer;
+      margin-left: 10px;
     }
 
     .video-grid {
-      margin-top: 2rem;
       display: flex;
       flex-wrap: wrap;
+      gap: 20px;
       justify-content: center;
-      gap: 1rem;
+      margin-top: 30px;
     }
 
     .video-card {
       width: 320px;
-      background: #222;
+      background: #1a1a1a;
       border-radius: 10px;
       overflow: hidden;
       padding: 0.5rem;
+      box-shadow: 0 0 10px rgba(255, 77, 77, 0.3);
     }
 
     iframe {
       width: 100%;
       height: 180px;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
     }
 
     .title {
-      padding: 0.5rem;
-      font-size: 0.95rem;
-      color: #ddd;
+      padding: 10px;
+      font-size: 14px;
+      color: #f0f0f0;
     }
   </style>
 </head>
 <body>
 
-  <h1>🔍 YouTube Video Search</h1>
-  <input type="text" id="searchInput" placeholder="Search YouTube videos..." />
-  <button onclick="searchVideos()">Search</button>
+  <h1>🎥 YouTube Video Search</h1>
+
+  <div class="search-container">
+    <input type="text" id="searchInput" placeholder="Search YouTube videos..." />
+    <button onclick="searchVideos()">Search</button>
+  </div>
 
   <div class="video-grid" id="videoResults"></div>
 
   <script>
-    const API_KEY = "AIzaSyDR6R4F4iU1vtTHKMeRt9MjK8EsIvqI0dk";
+    const API_KEY = "AIzaSyDR6R4F4iU1vtTHKMeRt9MjK8EsIvqI0dk"; // Your API key
 
     async function searchVideos() {
-      const query = document.getElementById("searchInput").value;
-      const response = await fetch(`https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=6&q=${encodeURIComponent(query)}&key=${API_KEY}`);
+      const query = document.getElementById("searchInput").value.trim();
+      if (!query) return alert("Please enter a search query!");
+
+      const url = `https://www.googleapis.com/youtube/v3/search?part=snippet&type=video&maxResults=6&q=${encodeURIComponent(query)}&key=${API_KEY}`;
+      const response = await fetch(url);
       const data = await response.json();
+
+      if (!data.items) {
+        document.getElementById("videoResults").innerHTML = `<p>No results found.</p>`;
+        return;
+      }
 
       const results = data.items.map(item => {
         const videoId = item.id.videoId;
         const title = item.snippet.title;
         return `
           <div class="video-card">
-            <iframe src="https://www.youtube.com/embed/${videoId}?rel=0&showinfo=0&autoplay=0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/${videoId}" allowfullscreen></iframe>
             <div class="title">${title}</div>
           </div>
         `;
